<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/maps_header">

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="traffic"
            app:title="@string/maps_traffic"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="crimes"
            app:title="@string/maps_crime"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="preferred_location_address"
            app:title="Preferred Location"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="preferred_location"
            app:layout="@layout/location_pref"
            app:title="Preferred Location"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header">
        <CheckBoxPreference
            app:defaultValue="false"
            app:key="notification_safety"
            app:summary="@string/notification_safety_summary"
            app:title="@string/notification_safety"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:defaultValue="false"
            app:key="notification_preferred"
            app:summary="Crime alerts based on preferred location"
            app:title="Crime alerts"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
