<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportCrimeActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_crime_type"
        android:padding="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:hint="@string/select_crime_type">

        <AutoCompleteTextView
            android:hint=""
            android:id="@+id/filled_exposed_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_crime_location"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:boxBackgroundColor="@null"
        app:boxStrokeColor="@null"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_my_location"
        app:endIconContentDescription="Current location"
        app:layout_constraintTop_toBottomOf="@id/input_crime_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_crime_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false"
            android:background="@null"
            android:text="@string/location"
            android:hint="@string/select_location"
            android:inputType="textMultiLine"
            app:backgroundTint="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReportCrime"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="0dp"
        android:onClick="reportCrime"
        android:padding="4dp"
        android:text="@string/btnReportCrime"
        android:textColor="#FFFFFF"
        app:backgroundTint="#536DFE"
        app:cornerRadius="0dp"
        app:icon="@drawable/ic_send"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressReportCrime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>